# rust_tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  build.sh  index.html  package.json  releases.sh  vite.config.js
.github/: ACTIONS.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml  release.yml
scripts/: version.sh
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  xmind.rs
