[package]
name = "rust-tools"
version = "0.2.1"
description = "Rust 工具包 - 实用开发工具集合"
edition = "2021"

[lib]
name = "rust_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
quick-xml = { version = "0.36", features = ["serialize"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
